--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   get: ^4.6.5
+  intl: ^0.17.0
+  percent_indicator: ^4.2.3  
+  carousel_slider: ^4.2.1
+  flashy_tab_bar2: ^0.0.10
 
 dev_dependencies:
   flutter_test:
@@ -60,9 +64,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/porsche_1.png
+    - assets/911GT3RS.jpg
+    - assets/812.jpg
+    - assets/AudiR8v10.jpg
+    - assets/Ek9.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
