--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   percent_indicator: ^4.2.3  
   carousel_slider: ^4.2.1
   flashy_tab_bar2: ^0.0.10
+  sqflite: ^2.3.3+1
 
 dev_dependencies:
   flutter_test:
